prerequisites/sfpowerscripts-artifact/force-app/main/default/objects/SfpowerscriptsInstalledArtifact__c/SfpowerscriptsInstalledArtifact__c.object-meta.xml
<CustomObject>
    <label>Sfpowerscripts Installed Artifact</label>
    <nameField>
        <displayFormat>IA-{0000000000}</displayFormat>
        <label>Installed Artifact ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sfpowerscripts Installed Artifacts</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>