prerequisites/sfpowerscripts-artifact/force-app/main/default/objects/SfpowerscriptsInstalledArtifact__c/fields/CompletionTime__c.field-meta.xml
<CustomField>
    <fullName>CompletionTime__c</fullName>
    <label>Completion Time</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>