prerequisites/sfpowerscripts-artifact/force-app/main/default/objects/SfpowerscriptsInstalledArtifact__c/fields/InstallationTime__c.field-meta.xml
<CustomField>
    <fullName>InstallationTime__c</fullName>
    <label>Installation Time</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>