prerequisites/sfpowerscripts-artifact/force-app/main/default/objects/SfpowerscriptsInstalledArtifact__c/fields/OrgID__c.field-meta.xml
<CustomField>
    <fullName>OrgID__c</fullName>
    <label>Org ID</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>