prerequisites/sfpowerscripts-artifact/force-app/main/default/objects/SfpowerscriptsInstalledArtifact__c/fields/OrgName__c.field-meta.xml
<CustomField>
    <fullName>OrgName__c</fullName>
    <label>Org Name</label>
    <length>200</length>
    <required>true</required>
    <type>Text</type>
</CustomField>