prerequisites/sfpowerscripts-artifact/force-app/main/default/objects/SfpowerscriptsInstalledArtifact__c/fields/VersionNumber__c.field-meta.xml
<CustomField>
    <fullName>VersionNumber__c</fullName>
    <label>Version Number</label>
    <length>200</length>
    <required>true</required>
    <type>Text</type>
</CustomField>