prerequisites/sfpowerscripts-artifact/force-app/main/default/objects/SfpowerscriptsInstalledArtifact__c/validationRules/Version_Id_required_for_Unlocked_package.validationRule-meta.xml
<ValidationRule>
    <fullName>Version_Id_required_for_Unlocked_package</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL( PackageType__c, &apos;Unlocked&apos;) &amp;&amp; ISNULL(VersionID__c)</errorConditionFormula>
    <errorDisplayField>VersionID__c</errorDisplayField>
    <errorMessage>Version Id required for Unlocked package</errorMessage>
</ValidationRule>