prerequisites/sfpowerscripts-artifact/force-app/main/default/objects/SfpowerscriptsInstalledArtifact__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Org_Name__c</columns>
    <columns>PackageType__c</columns>
    <columns>PackageName__c</columns>
    <columns>VersionNumber__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>